syntax = "proto3";
package layer.oracle;
import "layer/oracle/micro_report.proto";
option go_package = "github.com/tellor-io/layer/x/oracle/types";

message Reports {
  
  repeated MicroReport microReports = 1; 
}

message LivenessRecord {
    uint64 queries_reported = 1;
    uint64 accumulated_power = 2;
}